@@ -54,6 +54,8 @@ x2goclient (4.1.1.1-0x2go1) UNRELEASED; urgency=medium
       X2GO_XINERAMA in accordance with server changes.
     - src/onmainwindow.cpp: supply xinerama option as another parameter to
       x2goresume-session on session resume.
+    - src/sessionbutton.cpp: make button non-sensitive in bottom right part if
+      it's editable. Fixes: #1214.
 
   [ Oleksandr Shneyder ]
   * New upstream version (4.1.1.1):
